Bug 1783818 [Wayland] Don't fire Wayland vsync if VsyncSource is disabled r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D158196